--- a/Assignment1PRN/Views/AdminAddRoomView.xaml
+++ b/Assignment1PRN/Views/AdminAddRoomView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="Assignment1PRN.Views.AdminEditRoomView"
+﻿<UserControl x:Class="Assignment1PRN.Views.AdminAddRoomView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Assignment1PRN.Views"
-             mc:Ignorable="d"
+             mc:Ignorable="d" 
              d:DesignHeight="750" d:DesignWidth="800">
     <Grid>
         <Grid>
@@ -37,7 +37,7 @@
 
                 <TextBlock Text="Status" VerticalAlignment="Top" Margin="0 120 0 0"/>
                 <TextBox Text="{Binding Status}" VerticalAlignment="Top" Margin="100 120 0 0" />
-                
+
                 <TextBlock Text="Price" VerticalAlignment="Top" Margin="0 150 0 0"/>
                 <TextBox Text="{Binding RoomPricePerDay}" VerticalAlignment="Top" Margin="100 150 0 0" />
             </Grid>
