--- a/Assignment1PRN/Views/RoomManageView.xaml
+++ b/Assignment1PRN/Views/RoomManageView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Assignment1PRN.Views"
              mc:Ignorable="d"
-             d:DesignHeight="780" d:DesignWidth="800">
+             d:DesignHeight="750" d:DesignWidth="800">
     <Grid Margin="0,241,0,32">
         <TextBlock Margin="20,-238,0,216" FontSize="20" FontWeight="Bold" Text="Room Management"/>
         <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding RoomInformations}" Margin="0,-189,0,236">
@@ -29,6 +29,8 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Command="{Binding GoBack}" Content="Go Back" Margin="301,296,298,154"/>
+        <Button Command="{Binding Add}" Content="Add" Margin="301,310,298,128"/>
+        <Button Command="{Binding GoBack}" Content="Go Back" Margin="301,360,298,78"/>
+
     </Grid>
 </UserControl>
